--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "yam",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sundayswap.github.io/frontend",
   "dependencies": {
     "@types/debounce": "^1.2.0",
     "@types/jest": "^26.0.9",
